[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 5 - Production/Stable", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "Interface generation for ophyd devices"
dynamic = [ "version", "readme" ]
keywords = []
name = "typhos"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs",
    "entrypoints",
    "lxml",
    "numpy",
    "numpydoc",
    "ophyd",
    "pcdsutils",
    "platformdirs",
    "PyQt5",
    "pydm>=1.19.1",
    "pyqtgraph",
    "qdarkstyle",
    "qtawesome",
    "qtpy",
    "timechart",
]

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE.md"

[project.scripts]
typhos = "typhos.cli:main"

[tool.setuptools_scm]
write_to = "typhos/_version.py"

[project.entry-points."pydm.widget"]
TyphosAlarmCirclePlugin = "typhos.alarm:TyphosAlarmCircle"
TyphosAlarmEllipsePlugin = "typhos.alarm:TyphosAlarmEllipse"
TyphosAlarmPolygonPlugin = "typhos.alarm:TyphosAlarmPolygon"
TyphosAlarmRectanglePlugin = "typhos.alarm:TyphosAlarmRectangle"
TyphosAlarmTrianglePlugin = "typhos.alarm:TyphosAlarmTriangle"
TyphosCompositeSignalPanelPlugin = "typhos.panel:TyphosCompositeSignalPanel"
TyphosDeviceDisplayPlugin = "typhos.display:TyphosDeviceDisplay"
TyphosDisplaySwitcherPlugin = "typhos.display:TyphosDisplaySwitcher"
TyphosDisplayTitlePlugin = "typhos.display:TyphosDisplayTitle"
TyphosHelpFramePlugin = "typhos.display:TyphosHelpFrame"
TyphosMethodButtonPlugin = "typhos.func:TyphosMethodButton"
TyphosNotesEditPlugin = "typhos.notes:TyphosNotesEdit"
TyphosPositionerWidgetPlugin = "typhos.positioner:TyphosPositionerWidget"
TyphosPositionerRowWidgetPlugin = "typhos.positioner:TyphosPositionerRowWidget"
TyphosRelatedSuiteButtonPlugin = "typhos.related_display:TyphosRelatedSuiteButton"
TyphosSignalPanelPlugin = "typhos.panel:TyphosSignalPanel"

[project.entry-points."pydm.data_plugin"]
HappiPlugin = "typhos.plugins:HappiPlugin"
SignalPlugin = "typhos.plugins:SignalPlugin"

[project.optional-dependencies]
dev = [
    "caproto",
    "happi",
    "line_profiler",
    "lxml-stubs",
    "pcdsdevices>=8.4.0",
    "ruff>=0.15.11",
]
doc = [
    "docs-versions-menu",
    "happi",
    "ipython>=7.16",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-jquery",
]
test = [
    "caproto",
    "happi",
    "line_profiler",
    "pcdsdevices>=8.4.0",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-qt",
    "pytest-timeout",
]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "typhos*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "build", "dist", "*/_version.py"]

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright.defineConstant]
PYQT5 = true
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = false

[tool.uv]
exclude-newer = "7 days"
